# deviceconnectdisconnect

./: CMakeLists.txt  README.md  deviceconnectdisconnect.cpp  deviceconnectdisconnect.h  deviceconnectdisconnect_udev.cpp  deviceconnectdisconnect_udev.h  deviceconnectdisconnect_win.cpp  deviceconnectdisconnect_win.h  main.cpp
example/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  deviceconnectdisconnect.h  deviceconnectdisconnect_win.cpp
